--- a/goat_app/app/views/goats/show.html.erb
+++ b/goat_app/app/views/goats/show.html.erb
@@ -1,5 +1,5 @@
-<h1>Name: <%=@goat.name%></h1>
+<h1> <%= @goat.name %></h1>
 <br>
 
-<h2> Age: <%=@goat.age%></h2>
+<h2>  <%= @goat.age %></h2>
     
