--- a/goat_app/app/views/people/show.html.erb
+++ b/goat_app/app/views/people/show.html.erb
@@ -1,3 +1,5 @@
+<%# I am using in-line style tags. These are gross and clunky, but they work. %>
+<div style="text-align:center">
 <h1>Check out <%= @person.name%>'s amazing profile!</h1>
 <img src=<%=@person.img%> >
 <br>
@@ -7,10 +9,14 @@
 
 <%# here I just got fancy with a table, but am just iterating through the goats to give info on each one. %>
 <table>
+<%# @person.goats is an array of goat instances belonging to that person %>
 <%@person.goats.each do |g|%>
+<%# this defines a new row in the table %>
 <tr>
+<%# this is one column %>
     <td><img src=<%=g.img%> style="width: 100px">
     </td>
+<%# this is the other column. I just included a link_to and some dynamic data rendering %>
     <td><p><%=g.name%> is a <%=g.age%> year old! Want to <%= link_to "visit", goat_path(g) %> her?</p>
     </td>
 </tr>
@@ -18,3 +24,4 @@
 </table>
 <br>
 Want to <%= link_to "go back", people_path%> and see the rest of the gang?
+</div>
